==================== 2.21.5 ====================

2007-11-13  Christian Persch  <chpe@gnome.org>

	* window-list.glade: HIGify. Bug #490158.

==================== 2.20.1 ====================

==================== 2.20.0.1 ====================

==================== 2.20.0 ====================

==================== 2.19.92 ====================

==================== 2.19.6 ====================

2007-07-26  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_ShowDesktopApplet.xml:
	* GNOME_WindowListApplet.xml:
	* GNOME_WindowMenuApplet.xml:
	* GNOME_WorkspaceSwitcherApplet.xml:
	Use gtk-about icon i.s.o. deprectated gnome-stock-about
	Fixes bug #457148

==================== 2.19.5 ====================

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	Be a bit clever and show/hide relevant stuff in the properties dialog
	depending on the window manager.
	Fix bug #345153.

	* workspace-switcher.c: (pager_update): only set the display mode if
	we're running metacity. Else, we don't know if the workspaces have
	useful names, so it's probably useless.
	(update_properties_for_wm): new, hide/show some stuff in the
	properties dialog, resize the properties dialog and update the pager
	configuration because we have a new wm
	(window_manager_changed): new, for WM changes
	(applet_realized): connect to the wm-changed signal
	(applet_unrealized): new, because it's better to have this
	(workspace_switcher_applet_fill): init wm field, connect to the
	unrealize signal
	(update_workspaces_model): check that the properties dialog exist
	(properties_dialog_destroyed): new, set to NULL all our fields related
	to the dialog
	(delete_event): destroy the dialog
	(response_cb): ditto
	(close_dialog): ditto
	(setup_dialog): updated, connect to the destroy signal, and show/hide
	stuff depending on the wm
	* workspace-switcher.glade: use GtkFrame
	* workspace-switcher.schemas.in: add a small note for
	display_workspace_names telling that it only works for metacity
